--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ table.fraction input{
     background: #fcc;
     border: none;
     width: 40px;
+    text-align: center;
 }
 
 table.fraction tr:first-child > td:nth-child(odd) input{
